# NeoArealize

./: .gitignore  CMakeLists.txt  README.md  processes.py  sim.py  sim2.py
boundaries/: README.md
logs/: .gitignore
misc/: .gitignore
paper/: .gitignore  methods_notes.sh  methods_notes.tex
sim/: .gitignore  CMakeLists.txt  Hex.h  HexGrid.cpp  HexGrid.h  Karbowski_model.cpp  Karbowski_sim.py  Karbowski_view.py  chemoattractants.m  ermentrout.cpp  orient.cpp  orient_view.py  process.cpp  process2.cpp  process_2d_karb_fig4.cpp  process_2d_karb_fig5.cpp  process_2d_karb_fig6.cpp  process_2d_karb_fig8.cpp  process_2d_karb_gaussguidance.cpp  rd_2d_erm.h  rd_2d_karb.h  rd_orientpref.h  rd_template.h  testhexgrid.cpp  testhexgrid2.cpp  viewfactorexpression.m
